--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,7 +22,7 @@ a {
 }
 
 .inputbox {
-	height: 24px;
+	/*height: 24px;*/
 	line-height: 24px;
 	padding: 0 5px;
 	font-size: 14px;
@@ -64,11 +64,11 @@ background: #f6f6f6;
 
 #account {
 	padding-right: 33px;
-	width: 158px;
+	/*width: 158px;*/
 }
 
 #footer {
-	padding: 6px 0 3px 50px;
+	/*padding: 6px 0 3px 50px;*/
 	height: 40px;
 	width: 280px;
 }
@@ -350,7 +350,7 @@ li {
 #userMotto {
 	font-size: 14px;
 	clear: both;
-	height: 16px;
+	/*height: 16px;*/	
 	line-height: 16px;
 	overflow: hidden;
 	white-space: nowrap;
